# nomad-simulation-workflow-utilities

./: README.md  pyproject.toml
src/nomad_simulation_workflow_utilities/: datasets.py  entries.py  uploads.py  users.py  workflows.py
tests/: test.ipynb  test_workflow.archive.yaml  test_workflow.ipynb  test_workflow_simple.ipynb
